--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -62,16 +62,11 @@ cache.enable = 0
 cache.ttl = "rand:10000"
 
 
-vars.path.default = "main"
-vars.path.spetsproekt = "Spets_Proekt"
-vars.region.default = "federal"
-vars.section.notLinkTagInBreadCrumbs[] = "Spets_Proekt"
-
-
 
 mail.smtp.host = "192.168.40.193"
 mail.smtp.prot = 25
-mail.smtp.fromEmail = "noreply@regions.ru"
+mail.smtp.fromEmail = "noreply@snob.ru"
+
 
 log.write = 0
 log.place = "mail"
@@ -81,10 +76,15 @@ log.notlog.url[] = "/webservices/getvideoxml"
 log.notlog.url[] = "/webservices/updatepersonstate"
 
 
+route.path = APPLICATION_PATH "/configs/route.xml"
+
+
 [test : farm]
 resources.session.cookie_domain = "delivery.snob.ru"
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+
+
 
 
 
