--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,7 +4,7 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 1
 
-includePaths.library = APPLICATION_PATH "/../library"
+includePaths.library = APPLICATION_PATH "../library/"
 
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
