--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,12 +6,14 @@ resources.frontController.params.displayExceptions = 1
 
 includePaths.library = APPLICATION_PATH "../library/"
 
-bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
+bootstrap.path = APPLICATION_PATH "Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
 appnamespace = "Application"
 
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.controllerDirectory.default = APPLICATION_PATH "controllers"
+resources.frontController.controllerDirectory.cmd = APPLICATION_PATH "cmds"
+
 resources.frontController.params.displayExceptions = 0
 
 resources.db.adapter = PDO_MYSQL
@@ -78,6 +80,8 @@ log.notlog.url[] = "/webservices/updatepersonstate"
 
 route.path = APPLICATION_PATH "/configs/route.xml"
 
+cmdhttp.host = delivery.snob.ru
+
 
 [test : farm]
 resources.session.cookie_domain = "delivery.snob.ru"
@@ -110,3 +114,6 @@ memcachedb.file = "/var/db/memcachedb/default.db"
 
 
 memcache.host = "localhost"
+
+
+cmdhttp.host = delivery.local
