group autofill started

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -16,24 +16,28 @@ resources.frontController.controllerDirectory.cmd = APPLICATION_PATH "cmds"
 
 resources.frontController.params.displayExceptions = 0
 
-resources.db.adapter = PDO_MYSQL
-resources.db.driver = pdo_mysql
-resources.db.isDefaultTableAdapter = true
-
-resources.db.params.host = "localhost"
-resources.db.params.username = rg
-resources.db.params.password = kkl2SD7uid
-resources.db.params.dbname = rg_again
 
 
-/* PDO::MYSQL_ATTR_USE_BUFFERED_QUERY */
-resources.db.params.driver_options.1000 = true
+database.delivery.adapter = PDO_MYSQL
+database.delivery.driver = pdo_mysql
+database.delivery.params.host = "localhost"
+database.delivery.params.username = rg
+database.delivery.params.password = kkl2SD7uid
+database.delivery.params.dbname = rg_again
+database.delivery.params.driver_options.1000 = true
+database.delivery.params.driver_options.20 = false
+database.delivery.params.driver_options.2 = 4
 
-/* PDO::ATTR_EMULATE_PREPARES */
-resources.db.params.driver_options.20 = false
 
-/* PDO::ATTR_TIMEOUT */
-resources.db.params.driver_options.2 = 4
+database.snob.adapter = PDO_MYSQL
+database.snob.driver = pdo_mysql
+database.snob.params.host = "localhost"
+database.snob.params.username = rg
+database.snob.params.password = kkl2SD7uid
+database.snob.params.dbname = rg_again
+database.snob.params.driver_options.1000 = true
+database.snob.params.driver_options.20 = false
+database.snob.params.driver_options.2 = 4
 
 
 resources.session.name = "BLA"
@@ -94,10 +98,15 @@ phpSettings.display_errors = 1
 
 [staging : farm]
 
-resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
-resources.db.params.dbname = "delivery"
+database.delivery.params.host = "localhost"
+database.delivery.params.username = "root"
+database.delivery.params.password = "root"
+database.delivery.params.dbname = "delivery"
+
+database.snob.params.host = "localhost"
+database.snob.params.username = "root"
+database.snob.params.password = "root"
+database.snob.params.dbname = "snob_full"
 
 resources.session.cookie_domain = ""
 
