Автозаполнялки полностью готовы

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -18,15 +18,15 @@ resources.frontController.params.displayExceptions = 0
 
 
 
-database.delivery.adapter = PDO_MYSQL
-database.delivery.driver = pdo_mysql
-database.delivery.params.host = "localhost"
-database.delivery.params.username = rg
-database.delivery.params.password = kkl2SD7uid
-database.delivery.params.dbname = rg_again
-database.delivery.params.driver_options.1000 = true
-database.delivery.params.driver_options.20 = false
-database.delivery.params.driver_options.2 = 4
+database.default.adapter = PDO_MYSQL
+database.default.driver = pdo_mysql
+database.default.params.host = "localhost"
+database.default.params.username = rg
+database.default.params.password = kkl2SD7uid
+database.default.params.dbname = rg_again
+database.default.params.driver_options.1000 = true
+database.default.params.driver_options.20 = false
+database.default.params.driver_options.2 = 4
 
 
 database.snob.adapter = PDO_MYSQL
@@ -98,10 +98,10 @@ phpSettings.display_errors = 1
 
 [staging : farm]
 
-database.delivery.params.host = "localhost"
-database.delivery.params.username = "root"
-database.delivery.params.password = "root"
-database.delivery.params.dbname = "delivery"
+database.default.params.host = "localhost"
+database.default.params.username = "root"
+database.default.params.password = "root"
+database.default.params.dbname = "delivery"
 
 database.snob.params.host = "localhost"
 database.snob.params.username = "root"
