multi select control

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -53,7 +53,7 @@ resources.session.use_only_cookies = true
 ;resources.session.saveHandler.options.lifetime = 1800
 
 
-resources.session.cookie_domain = "www.regions.ru"
+resources.session.cookie_domain = "."
 resources.session.save_path = "../session/"
 resources.session.gc_maxlifetime = 1209600
 
@@ -86,6 +86,7 @@ route.path = APPLICATION_PATH "/configs/route.xml"
 
 cmdhttp.host = delivery.snob.ru
 
+html.title_prefix = Delivery @ Snob
 
 [test : farm]
 resources.session.cookie_domain = "delivery.snob.ru"
