--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,7 +4,7 @@ phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 resources.frontController.params.displayExceptions = 1
 
-includePaths.library = APPLICATION_PATH "../library/"
+includePaths.library = APPLICATION_PATH "../Library/"
 
 bootstrap.path = APPLICATION_PATH "Bootstrap.php"
 bootstrap.class = "Bootstrap"
@@ -20,10 +20,10 @@ resources.frontController.params.displayExceptions = 0
 
 database.default.adapter = PDO_MYSQL
 database.default.driver = pdo_mysql
-database.default.params.host = "localhost"
-database.default.params.username = rg
-database.default.params.password = kkl2SD7uid
-database.default.params.dbname = rg_again
+database.default.params.host = "192.168.0.31"
+database.default.params.username = "snob_user"
+database.default.params.password = "123"
+database.default.params.dbname = "snob"
 database.default.params.driver_options.1000 = true
 database.default.params.driver_options.20 = false
 database.default.params.driver_options.2 = 4
@@ -31,10 +31,10 @@ database.default.params.driver_options.2 = 4
 
 database.snob.adapter = PDO_MYSQL
 database.snob.driver = pdo_mysql
-database.snob.params.host = "localhost"
-database.snob.params.username = rg
-database.snob.params.password = kkl2SD7uid
-database.snob.params.dbname = rg_again
+database.snob.params.host = "192.168.0.31"
+database.snob.params.username = "snob_user"
+database.snob.params.password = "123"
+database.snob.params.dbname = "snob_delivery"
 database.snob.params.driver_options.1000 = true
 database.snob.params.driver_options.20 = false
 database.snob.params.driver_options.2 = 4
@@ -42,30 +42,12 @@ database.snob.params.driver_options.2 = 4
 
 resources.session.name = "BLA"
 resources.session.use_only_cookies = true
-;resources.session.saveHandler.class = "Service\Session_SaveHandler_Memcachedb"
-
-
-;resources.session.saveHandler.options.name = "session_data"
-;resources.session.saveHandler.options.primary = "id"
-;resources.session.saveHandler.options.modifiedColumn = "modified"
-;resources.session.saveHandler.options.dataColumn = "data"
-;resources.session.saveHandler.options.lifetimeColumn = "lifetime"
-;resources.session.saveHandler.options.lifetime = 1800
 
 
 resources.session.cookie_domain = "."
 resources.session.save_path = "../session/"
 resources.session.gc_maxlifetime = 1209600
 
-
-memcachedb.host = "127.0.0.1"
-memcachedb.port = 11211
-memcachedb.file = "/var/db/memcachedb/default.db"
-
-memcache.host = "127.0.0.1"
-
-cache.enable = 0
-cache.ttl = "rand:10000"
 
 
 
@@ -81,17 +63,11 @@ log.email = "abaranov@jv.ru"
 log.notlog.url[] = "/webservices/getvideoxml"
 log.notlog.url[] = "/webservices/updatepersonstate"
 
-
 route.path = APPLICATION_PATH "/configs/route.xml"
-
-cmdhttp.host = delivery.snob.ru
 
 html.title_prefix = Delivery @ Snob
 
 [test : farm]
-resources.session.cookie_domain = "delivery.snob.ru"
-phpSettings.display_startup_errors = 1
-phpSettings.display_errors = 1
 
 
 
@@ -99,31 +75,18 @@ phpSettings.display_errors = 1
 
 [staging : farm]
 
-database.default.params.host = "localhost"
-database.default.params.username = "root"
-database.default.params.password = "root"
-database.default.params.dbname = "delivery"
+database.default.params.host = "192.168.40.222"
+database.default.params.username = "abaranov"
+database.default.params.password = "hjpjdstckjybrbbuhfkbddjktq,jk"
+database.default.params.dbname = "snob_delivery"
 
-database.snob.params.host = "localhost"
-database.snob.params.username = "root"
-database.snob.params.password = "root"
-database.snob.params.dbname = "snob_full"
+database.snob.params.host = "192.168.40.222"
+database.snob.params.username = "abaranov"
+database.snob.params.password = "hjpjdstckjybrbbuhfkbddjktq,jk"
+database.snob.params.dbname = "snob"
 
 resources.session.cookie_domain = ""
 
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-
-
-memcachedb.host = "localhost"
-memcachedb.port = 11212
-memcachedb.file = "/var/db/memcachedb/default.db"
-
-
-
-memcache.host = "localhost"
-
-
-cmdhttp.host = delivery.local
