--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -56,9 +56,9 @@ mail.smtp.prot = 25
 mail.smtp.fromEmail = "noreply@snob.ru"
 
 
-log.write = 0
-log.place = "mail"
-log.folder = "../_tmp/cache_log/"
+log.write = 1
+log.place = "file"
+log.folder = APPLICATION_PATH "../_log/"
 log.email = "abaranov@jv.ru"
 log.notlog.url[] = "/webservices/getvideoxml"
 log.notlog.url[] = "/webservices/updatepersonstate"
