--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -40,13 +40,10 @@ database.snob.params.driver_options.20 = false
 database.snob.params.driver_options.2 = 4
 
 
-resources.session.name = "BLA"
-resources.session.use_only_cookies = true
-
-
-resources.session.cookie_domain = "."
-resources.session.save_path = "../session/"
-resources.session.gc_maxlifetime = 1209600
+session.name = "BLA"
+session.use_only_cookies = true
+session.cookie_domain = "."
+session.gc_maxlifetime = 1209600
 
 
 
