--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,7 +1,9 @@
 [farm]
 
+phpSettings.session.auto_start = 0
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
+;phpSettings.zlib.output_compression = 0
 resources.frontController.params.displayExceptions = 1
 
 includePaths.library = APPLICATION_PATH "../Library/"
@@ -51,6 +53,16 @@ session.gc_maxlifetime = 1209600
 mail.smtp.host = "192.168.40.193"
 mail.smtp.prot = 25
 mail.smtp.fromEmail = "noreply@snob.ru"
+mail.from[] = "noreply@snob.ru"
+mail.from[] = "snob@snob.ru"
+mail.from[] = "info@snob.ru"
+
+userfilter[paid] = 'Платный или бесплатный аккаут'
+userfilter[city] = 'Город'
+userfilter[country] = 'Страна'
+userfilter[subscribe_end_date] = 'Дата окончания подписки не позже'
+userfilter[subscribe_start_date] = 'Дата начала подписки позже'
+
 
 
 log.write = 1
@@ -63,6 +75,8 @@ log.notlog.url[] = "/webservices/updatepersonstate"
 route.path = APPLICATION_PATH "/configs/route.xml"
 
 html.title_prefix = Delivery @ Snob
+
+
 
 [test : farm]
 
