--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,7 @@
 [farm]
 
 phpSettings.session.auto_start = 0
+phpSettings.max_execution_time = 0
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 ;phpSettings.zlib.output_compression = 0
@@ -42,10 +43,10 @@ database.snob.params.driver_options.20 = false
 database.snob.params.driver_options.2 = 4
 
 
-session.name = "BLA"
-session.use_only_cookies = true
-session.cookie_domain = "."
-session.gc_maxlifetime = 1209600
+resources.session.name = "BLA"
+resources.session.use_only_cookies = true
+resources.session.cookie_domain = "."
+resources.session.gc_maxlifetime = 1209600
 
 
 
