--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,8 @@
 [farm]
 
 phpSettings.session.auto_start = 0
+phpSettings.session.save_path = APPLICATION_PATH "../_session"
+phpSettings.session.gc_divisor = 1
 phpSettings.max_execution_time = 0
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
@@ -12,7 +14,7 @@ includePaths.library = APPLICATION_PATH "../Library/"
 bootstrap.path = APPLICATION_PATH "Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
-appnamespace = "Application"
+appnamespace = "SnobDelivery"
 
 resources.frontController.controllerDirectory.default = APPLICATION_PATH "controllers"
 resources.frontController.controllerDirectory.cmd = APPLICATION_PATH "cmds"
@@ -57,6 +59,7 @@ mail.smtp.fromEmail = "noreply@snob.ru"
 mail.from[] = "noreply@snob.ru"
 mail.from[] = "snob@snob.ru"
 mail.from[] = "info@snob.ru"
+
 
 userfilter[paid] = 'Платный или бесплатный аккаут'
 userfilter[city] = 'Город'
