--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -92,6 +92,8 @@ html.title_prefix = Delivery @ Snob
 
 templates.old_path = APPLICATION_PATH "data/templates/"
 
+site.url = "http://delivery.snob.ru"
+
 [test : farm]
 
 
@@ -120,3 +122,5 @@ resources.session.cookie_domain = ""
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+site.url = "http://delivery.abaranov.dev"
